2007-06-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-image.el (w3m-imagick-convert-program, w3m-resize-images): Reset
	them if convert program is not really available.
	(w3m-imagick-convert-program-available-p): New function.
	(w3m-imagick-convert-buffer, w3m-imagick-start-convert-data): Use it.

2007-06-05  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* w3m-image.el (w3m-imagick-start-convert-data): Clarify message which
	is issued when convert program is not available.

2007-06-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-mixi): Follow the change of Mixi's HTML.

2007-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* attic/vm-w3m.el, attic/vm-7.19.patch: Remove.  They have been
	integrated into VM 8.x.

2007-05-17  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* w3m.el (w3m-view-this-url-1): Check whether the marker buffer exists.

2007-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-switch-to-buffer, w3m-subst-switch-to-buffer-keys):
	Remove.

2007-05-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-expand-url): Guard error in aref when url is "".

2007-05-16  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-expand-url): Remove query strings when expanding URL like
	"foo.cgi?#bar"; add "./" to top of URL when expanding "?hoge".

2007-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-switch-to-buffer): Work just like switch-to-buffer.
	Suggested by Robert J. Chassell <bob@rattlesnake.com>.

2007-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-encode-string, w3m-url-transfer-encode-string): Use
	uppercase letters in hexadecimal string.  Suggested by Lukasz Demianiuk
	<ldemianiuk@gmail.com>.

2007-05-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-header-line-url): New function.
	(w3m-url-at-point): Call w3m-header-line-url after
	w3m-gmane-url-at-point.
	(w3m-goto-url-with-timer): Execute w3m-goto-url if its buffer does not
	exist foreground.
