@@ -75,53 +75,53 @@
       ,@(cond
 	 ((and ja utf-8)
 	  '(("google"
-	     "http://www.google.com/search?q=%s&hl=ja&lr=lang_ja&ie=utf-8"
+	     "http://www.google.com/search?q=%s&hl=ja&lr=lang_ja&ie=utf-8&oe=utf-8"
 	     utf-8)
 	    ("google-en"
-	     "http://www.google.com/search?q=%s&hl=en&ie=utf-8"
+	     "http://www.google.com/search?q=%s&hl=en&ie=utf-8&oe=utf-8"
 	     utf-8)))
 	 (ja
 	  '(("google"
-	     "http://www.google.com/search?q=%s&hl=ja&lr=lang_ja&ie=Shift_JIS"
+	     "http://www.google.com/search?q=%s&hl=ja&lr=lang_ja&ie=Shift_JIS&oe=Shift_JIS"
 	     shift_jis)
 	    ("google-en"
 	     "http://www.google.com/search?q=%s&hl=en")))
 	 (utf-8
 	  '(("google"
-	     "http://www.google.com/search?q=%s&ie=utf-8"
+	     "http://www.google.com/search?q=%s&ie=utf-8&oe=utf-8"
 	     utf-8)
 	    ("google-en"
-	     "http://www.google.com/search?q=%s&hl=en&ie=utf-8"
+	     "http://www.google.com/search?q=%s&hl=en&ie=utf-8&oe=utf-8"
 	     utf-8)))
 	 (t
 	  '(("google"
 	     "http://www.google.com/search?q=%s")
 	    ("google-ja"
-	     "http://www.google.com/search?q=%s&hl=ja&lr=lang_ja&ie=Shift_JIS"
+	     "http://www.google.com/search?q=%s&hl=ja&lr=lang_ja&ie=Shift_JIS&oe=Shift_JIS"
 	     shift_jis))))
       ,@(cond
 	 ((and ja utf-8)
 	  '(("google news"
-	     "http://news.google.co.jp/news?hl=ja&ie=utf-8&q=%s"
+	     "http://news.google.co.jp/news?hl=ja&ie=utf-8&q=%s&oe=utf-8"
 	     utf-8)
 	    ("google news-en"
 	     "http://news.google.com/news?hl=en&q=%s")))
 	 (ja
 	  '(("google news"
-	     "http://news.google.co.jp/news?hl=ja&ie=Shift_JIS&q=%s"
+	     "http://news.google.co.jp/news?hl=ja&ie=Shift_JIS&q=%s&oe=Shift_JIS"
 	     shift_jis)
 	    ("google news-en"
 	     "http://news.google.com/news?hl=en&q=%s")))
 	 (utf-8
 	  '(("google news"
-	     "http://news.google.co.jp/news?hl=ja&ie=utf-8&q=%s"
+	     "http://news.google.co.jp/news?hl=ja&ie=utf-8&q=%s&oe=utf-8"
 	     utf-8)
 	    ("google news-en"
 	     "http://news.google.com/news?hl=en&q=%s")))
 	 '(("google news"
 	    "http://news.google.com/news?q=%s")
 	   ("google news-ja"
-	    "http://news.google.co.jp/news?hl=ja&ie=Shift_JIS&q=%s"
+	    "http://news.google.co.jp/news?hl=ja&ie=Shift_JIS&q=%s&oe=Shift_JIS"
 	    shift_jis)))
       ("google groups"
        "http://groups.google.com/groups?q=%s")
